# jawiki-kana-kanji-dict

./: .gitignore  CLAUDE.md  ChangeLog  Makefile  README.md  SKK-JISYO.jawiki  TODO.md  check.py  converter.py  cpanfile  filter.py  jawiki2skkdic.pl  makedict.py  missing.tsv  post_validator.py  pre_validator.py  pyproject.toml  pytest.ini  requirements.txt  scanner.py  setup.py  user_simpledic.csv
.github/workflows/: python-app.yml
dat/: .gitignore
jawiki/: container.py  converter.py  file_processor.py  filter.py  hojin.py  jachars.py  post_validate.py  pre_validate.py  romkan.py  scanner.py  skkdict.py
lib/: W.pm
t/: 00_basic.t  01_parse_page.t  02_parse_body.t  02_parse_text.t
tests/: mapping.tsv  pytest_filter.py  test_converter.py  test_filter.py  test_filter_entry.py  test_hojin_filter.py  test_integration_test.py  test_jachars.py  test_post_validate.py  test_pre_validator.py  test_scan_words.py  test_skkdict.py  test_validate_phase1.py  test_validate_phase2.py
